verif/test/deca/context/invalid/object/method-not-found-verif.res
src/test/deca/context/invalid/object/method-not-found.deca:11:25: Method 'undefinedMethod' does not exist in current context of expressions
